Fix spell view whitespace wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,12 @@
   padding: 25px;
 }
 .whitespace {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 .description {
-  width: 20px;
+
+}
+.main-container {
+  margin-left: 15%;
+  margin-right: 10%;
 }
